--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,15 +1,17 @@
 ---
-- shell: 'keytool -list -keystore {{java_certificate_ca_path}} -storepass {{java_certificate_store_pass}} -noprompt -alias {{java_certificate_alias}}'
-  name: 'java-certificate | check if already imported'
+- name: 'java-certificate | check if already imported'
+  shell: '{{ java_path }}/bin/keytool -list -keystore {{java_certificate_ca_path}} -storepass {{java_certificate_store_pass}} -noprompt -alias {{java_certificate_alias}}'
   ignore_errors: true
+  changed_when: false
   register: java_cert_imported
 
-- shell: "echo -n | openssl s_client -connect {{java_certificate_host}}:{{java_certificate_port}} | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > /tmp/{{java_certificate_alias}}.crt"
-  name: 'java-certificate | download certificate'
+- name: 'java-certificate | download certificate'
+  shell: "echo -n | openssl s_client -connect {{java_certificate_host}}:{{java_certificate_port}} | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > /tmp/{{java_certificate_alias}}.crt"
   args:
+    executable: /bin/bash
     creates: " /tmp/{{java_certificate_alias}}.crt"
   when: java_cert_imported|failed
 
-- shell: 'keytool -import -trustcacerts -keystore {{java_certificate_ca_path}} -storepass {{java_certificate_store_pass}} -noprompt -alias {{java_certificate_alias}} -file /tmp/{{java_certificate_alias}}.crt'
-  name: 'java-certificate | import certificate'
+- name: 'java-certificate | import certificate'
+  shell: '{{ java_path }}/bin/keytool -import -trustcacerts -keystore {{java_certificate_ca_path}} -storepass {{java_certificate_store_pass}} -noprompt -alias {{java_certificate_alias}} -file /tmp/{{java_certificate_alias}}.crt'
   when: java_cert_imported|failed
