--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 script:
   - echo travis.dev > inventory
   - ansible-playbook -i inventory --syntax-check --list-tasks test.yml
-  - ansible-playbook -i inventory --extra-vars "java_certificate_host=travis-ci.org" --connection=local --sudo -vvvv test.yml
+  - ansible-playbook -i inventory --extra-vars "java_certificate_host=github.com" --connection=local --sudo -vvvv test.yml
 addons:
   hosts:
     - travis.dev
