--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ install:
   - pip install ansible
 script:
   - echo travis.dev > inventory
-  - ansible-playbook -i inventory --syntax-check --list-tasks test.yml
-  - ansible-playbook -i inventory --extra-vars "java_certificate_host=github.com" --connection=local --sudo -vvvv test.yml
+  - sudo ansible-playbook -i inventory --syntax-check --list-tasks test.yml
+  - sudo ansible-playbook -i inventory --extra-vars "java_certificate_host=github.com" --connection=local --sudo -vvvv test.yml
 addons:
   hosts:
     - travis.dev
