--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,32 @@
 ---
 language: python
-python: "2.7"
+python:
+  - 2.7
+#  - 3.3
+#  - 3.4
+#  - 3.5
+cache:
+  directories:
+    - $HOME/.cache/pip
+env:
+  - ANSIBLE_VERSION=2.4.1.0
+cache: bundler
+#sudo: false
+sudo: required
+dist: trusty
 before_install:
  - sudo apt-get update -qq
+ - sudo apt-get install curl
  - sudo apt-get install -qq python-apt python-pycurl
+
 install:
-  - pip install ansible
+  # Install Ansible.
+  - sudo pip install ansible==$ANSIBLE_VERSION
+  
 script:
+  # Check ansible version
+  - sudo ansible --version
+  
   - echo travis.dev > inventory
   - sudo ansible-playbook -i inventory --syntax-check --list-tasks test.yml
   - sudo ansible-playbook -i inventory --extra-vars "java_certificate_host=github.com" --connection=local --sudo -vvvv test.yml
